--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,265 @@
+.large_div {
+    max-width: 100vw;
+    overflow: hidden;
+    animation: fadein 1s;
+    -moz-animation: fadein 1s;
+    -webkit-animation: fadein 1s;
+    -o-animation: fadein 1s;
+}
+
+.bolded {
+    font-weight: bold;
+    color:#c9beb1;;
+}
+
+.bolded_link {
+    font-weight: bold;
+    color:#cfa97c;
+}
+
+body::-webkit-scrollbar{
+    display: none;
+}
+
+#rectangle {
+    width:100%;
+    height: 50px;
+    background: black;
+    margin-top: 59vw;
+}
+
 body {
     margin: 0;
-    background: pink;
+    background: black;
     text-align: center;
+    color: grey;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    position: relative;
+    width:100vw;
+    height: 100vh + scrollHeight;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.far {
+    width: 100%;
+    height: auto;
 }
 
 h1.e_name {
-    color: blue;
+    color: grey;
     font-family: "Helvetica";
+    font-size: 700%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 5%;
+    text-align: left;
+}
+
+p.description {
+    color:#c9beb1;;
+    max-width: 50%;
+    font-size: 200%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+
+p.description a {
+    color: #cfa97c;
+    text-decoration: none;
+}
+
+p.description a:hover {
+    color: #cfa97c;
+    text-decoration: underline;
+}
+
+p.end_thing {
+    position:absolute;
+    font-size: 300%;
+    margin-top: -10px;
+    left: 0;
+    right: 0;
+    color: #c9beb1;
+}
+
+#side_img_r1 {
+    position: absolute;
+    top: 10%;
+    right: 5%;
+    background-size: 100px;
+    height: 250px;
+    width:250px;
+    background: url("images/placeholder.jpg") no-repeat;
+    background-size:contain;
+    z-index: -9999;
+}
+
+body.personal_info {
+    display: inline-block;
+    position: relative;
+}
+
+#navbar {
+    animation: none;
+    -moz-animation: none;
+    -webkit-animation: none;
+    -o-animation: none;
+    position: fixed;
+    width:100%;
+    height: 50px;
+    background: black;
+    position: fixed;
+    top:0;
+    z-index: 5;
+}
+
+li {
+    float: left;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li a {
+    display: block;
+    color: grey;
+    font-family: "Helvetica";
+    text-align: center;
+    margin: 15px 16px;
+    text-decoration: none;
+    outline-color: black;
+    outline-style: outset;
+}
+
+li a:hover {
+    text-decoration: underline;
+}
+
+.parallax {
+    position: relative;
+    max-width: 100%;
+    overflow: visible;
+}
+
+.image_close {
+    width: 100vw;
+    height: auto;
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    transform-origin: bottom;
+}
+
+.image_middle {
+    width: 100vw;
+    height: auto;
+    position:absolute;
+    z-index: 1;
+    left:0;
+    transform-origin: bottom;
+}
+
+.image_far {
+    width: 100vw;
+    height: auto;
+    position: absolute;
+    z-index: 0;
+    left:0;
+    transform-origin: bottom;
+}
+
+.front_layer {
+    position: absolute;
+}
+
+.image_blog {
+    position: absolute;
+    left: 65vw;
+    top: 34vw;
+    width: 20vw;
+    height: 7vw;
+    background: url("images/Blog.png") no-repeat;
+    background-size:19vw;
+    z-index: 4;
+}
+
+.image_blog:hover {
+    position: absolute;
+    left: 65vw;
+    top: 34vw;
+    width: 20vw;
+    height: 7vw;
+    background: url("images/Blog3.png") no-repeat;
+    background-size:19vw;
+    z-index: 4;
+}
+
+.image_blog2 {
+    width: 25vw;
+    height: auto;
+    position: absolute;
+    z-index: 3;
+    left:63vw;
+    top: 28vw;
+    transform-origin: bottom;
+}
+
+.blog_button {
+    overflow: hidden;
+    width: 100px;
+    height: 100px;
+}
+
+#bottom {
+    height: 100%;
+}
+
+#bottom p {
+    font-size: 1vw;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    z-index: 4;
+    width: 100%;
 }
