--- a/styles_blog_post1.css
+++ b/styles_blog_post1.css
@@ -155,6 +155,7 @@ p.blog_text a:hover {
     text-decoration: underline;
 }
 
+/*Image*/
 #side_img_r1_parallax {
     position: relative;
     max-width: 100%;
