--- a/styles_blog.css
+++ b/styles_blog.css
@@ -158,11 +158,11 @@ p.blog_description {
 
 #side_img_r1 {
     position: absolute;
-    top: 10%;
+    top: 40%;
     right: 5%;
     background-size: 100px;
-    height: 250px;
-    width:250px;
+    height: 15vw;
+    width: 15vw;
     background: url("images/placeholder.jpg") no-repeat;
     background-size:contain;
     z-index: -9999;
