--- a/styles_blog_post1.css
+++ b/styles_blog_post1.css
@@ -164,7 +164,7 @@ p.blog_text a:hover {
 
 #side_img_r1 {
     position: absolute;
-    top: -70vh;
+    bottom: 20vh;
     left: 65vw;
     width:25vw;
     height: 25vw;
