--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,11 @@
-.large_div {
-    max-width: 100vw;
-    overflow: hidden;
-    animation: fadein 1s;
-    -moz-animation: fadein 1s;
-    -webkit-animation: fadein 1s;
-    -o-animation: fadein 1s;
+.flex-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
+/*Texts*/
 .bolded {
     font-weight: bold;
     color:#c9beb1;;
@@ -14,7 +13,17 @@
 
 .bolded_link {
     font-weight: bold;
-    color:#cfa97c;
+    color:#ffb356;
+}
+
+.large_div {
+    flex: 1;
+    max-width: 100vw;
+    overflow: hidden;
+    animation: fadein 1s;
+    -moz-animation: fadein 1s;
+    -webkit-animation: fadein 1s;
+    -o-animation: fadein 1s;
 }
 
 html::-webkit-scrollbar,
@@ -40,7 +49,6 @@ body {
     scrollbar-width: none;
     position: relative;
     width:100vw;
-    height: 100vh + scrollHeight;
 }
 
 @keyframes fadein {
@@ -79,197 +87,14 @@ body {
     }
 }
 
-.far {
-    width: 100%;
-    height: auto;
-}
-
-h1.e_name {
-    color: grey;
-    font-family: "Helvetica";
-    font-size: 700%;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-left: 5%;
-    text-align: left;
-}
-
-p.description {
-    color:#c9beb1;;
-    max-width: 50%;
-    font-size: 200%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-}
-
-p.description a {
-    color: #cfa97c;
-    text-decoration: none;
-}
-
-p.description a:hover {
-    color: #cfa97c;
-    text-decoration: underline;
-}
-
-p.end_thing {
-    position:absolute;
-    font-size: 300%;
-    margin-top: -10px;
-    left: 0;
-    right: 0;
-    color: #c9beb1;
-}
-
-#side_img_r1 {
-    position: absolute;
-    top: 15%;
-    right: 5%;
-    background-size: 100px;
-    height: 15vw;
-    width: 15vw;
-    background: url("images/placeholder.jpg") no-repeat;
-    background-size:contain;
-    z-index: -9999;
-}
-
-body.personal_info {
-    display: inline-block;
-    position: relative;
-}
-
-#navbar {
-    animation: none;
-    -moz-animation: none;
-    -webkit-animation: none;
-    -o-animation: none;
-    position: fixed;
-    width:100%;
-    height: 50px;
-    background: black;
-    position: fixed;
-    top:0;
-    z-index: 6;
-}
-
-li {
-    float: left;
-    border: 2px solid #555;
-    border-left: none;
-    border-top: none;
-    border-bottom: none;
-}
-
-li:first-child {
-  border-left: 2px solid #555; /* keep left border on first tab */
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-li a {
-    display: block;
-    color: grey;
-    font-family: "Helvetica";
-    text-align: center;
-    margin: 15px 16px;
-    text-decoration: none;
-    outline-color: black;
-    /*outline-style: outset;*/
-}
-
-li a:hover {
-    text-decoration: underline;
-}
-
-.parallax {
-    position: relative;
-    max-width: 100%;
-    overflow: visible;
-}
-
-.image_close {
-    margin-top: 4px;
-    width: 100vw;
-    height: auto;
-    position: absolute;
-    z-index: 2;
-    left: 0;
-    transform-origin: bottom;
-}
-
-.image_middle {
-    width: 100vw;
-    height: auto;
-    position:absolute;
-    z-index: 1;
-    left:0;
-    transform-origin: bottom;
-}
-
-.image_far {
-    width: 100vw;
-    height: auto;
-    position: absolute;
-    z-index: 0;
-    left:0;
-    transform-origin: bottom;
-}
-
-.front_layer {
-    position: absolute;
-}
-
-.image_blog {
-    position: absolute;
-    left: 65vw;
-    top: 34vw;
-    width: 20vw;
-    height: 7vw;
-    background: url("images/Blog.png") no-repeat;
-    background-size:19vw;
-    z-index: 4;
-}
-
-.image_blog:hover {
-    position: absolute;
-    left: 65vw;
-    top: 34vw;
-    width: 20vw;
-    height: 7vw;
-    background: url("images/Blog3.png") no-repeat;
-    background-size:19vw;
-    z-index: 4;
-}
-
-.image_blog2 {
-    width: 25vw;
-    height: auto;
-    position: absolute;
-    z-index: 3;
-    left:63vw;
-    top: 28vw;
-    transform-origin: bottom;
-}
-
-.blog_button {
-    overflow: hidden;
-    width: 100px;
-    height: 100px;
-}
-
+/*Footer*/
 #bottom {
+    margin-top: auto;
     height: 100%;
 }
-
 #bottom p {
-    font-size: 1vw;
-    position: absolute;
+    /*font-size: 15px;*/
+    font-size: 20px;
     bottom: 0;
     text-align: center;
     z-index: 4;
