--- a/styles_index.css
+++ b/styles_index.css
@@ -31,13 +31,30 @@ body {
     height: 100vh + scrollHeight;
 }
 
+.bio_profile_container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    margin-bottom: -10vw;
+}
+
 p.bio {
     color:#c9beb1;
-    max-width: 80%;
+    max-width: 60%;
     font-size: 150%;
     margin-left: 5%;
     text-align: left;
     margin-bottom: 100px;
+}
+
+.profile_picture {
+    max-width: 25%;
+    height: auto;
+    border-radius: 500px;
+    margin-bottom: 250px;
 }
 
 p.description {
